--- a/index.html
+++ b/index.html
@@ -4,22 +4,188 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>2 task</title>
+    <title>Заряд</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <div class="wrapper">
       <header class="header">
-        <img src="./logo.svg" alt="logo">
-        1
+        <menu>
+          <img class="logo" src="./logos/logo.svg" alt="logo" />
+
+          <p class="menu-localization">
+            <a class="active" href="">Ru </a>/<a href=""> En</a>
+          </p>
+          <span class="menu-sections">
+            <a class="active" href="">Клюшки</a>
+            <a href="">Одежда</a>
+            <a href="">Аксессуары</a>
+            <a href="">Кастомизация</a>
+            <a href="">Отследить заказ</a>
+          </span>
+          <div class="menu-sections2">
+            <div class="menu-sections2-links">
+              <a href="">
+                <img src="./icons/search.svg" alt="" />
+              </a>
+              <a href="">
+                <img src="./icons/phone.svg" alt="" />
+              </a>
+              <a href="">
+                <img src="./icons/statistics.svg" alt="" />
+              </a>
+              <a href="">
+                <img src="./icons/profile.svg" alt="" />
+              </a>
+            </div>
+            <a href=""><img src="./icons/basket.svg" alt="" /></a>
+          </div>
+        </menu>
       </header>
+
       <main class="main">
-        2
+        <div class="main-slider-background">
+          <div class="main-slider-container">
+            <img src="./logos/logo2.svg" alt="logo2" />
+
+            <div class="slider-images">
+              <img src="./images/slider1.svg" alt="" />
+              <img src="./images/slider2.svg" alt="" />
+              <img src="./images/slider3.svg" alt="" />
+            </div>
+
+            <div class="slider-btns-container">
+              <button class="left-slider-btn">&lt;</button>
+              <button class="right-slider-btn">&lt;</button>
+            </div>
+            <button class="btn-add">В каталог</button>
+            <div class="blur1"></div>
+            <div class="blur2"></div>
+          </div>
+        </div>
+
+        <div class="main-discount-background">
+          <div class="main-discount-container">
+            <div class="discount-form">
+              <p>
+                Получи <img src="./images/Lightning.svg" alt="" /><br />
+                <img src="./images/sale.svg" alt="" /> скидку
+                <span class="rubles">500 ₽</span><br />
+                за подписку
+              </p>
+              <span class="discount-form-text"
+                >Никакого спама и рекламы, только полезная <br />информация,
+                скидки и персональные предложения</span
+              >
+              <br />
+              <input type="text" placeholder="Ваш Email" />
+              <button class="btn-subscribe">Подписаться</button>
+            </div>
+            <img src="./images/image2.svg" alt="" />
+            <div class="blur3"></div>
+            <div class="blur4"></div>
+          </div>
+        </div>
       </main>
+
       <footer>
-         3
+        <div class="footer-container">
+          <div class="footer-icons">
+            <img src="./logos/logo3.svg" alt="" />
+
+            <span class="footer-messenger-icons">
+              <a href="">
+                <img src="./icons/telegramm.svg" alt="" />
+              </a>
+
+              <a href="">
+                <img src="./icons/vk.svg" alt="" />
+              </a>
+            </span>
+          </div>
+
+          <div class="footer-content-container">
+            <div class="footer-contacs">
+              <div>
+                <h6>Наименование</h6>
+                <p>ООО «ЗаряД»</p>
+
+                <h6>Юридический адрес</h6>
+                <p>
+                  Республика Татарстан, г.Набережные Челны,<br />ул.
+                  Альметьевский тракт, д.6а
+                </p>
+
+                <div class="contacs-grid">
+                  <div>
+                    <h6>Телефон</h6>
+                    <p>+7 (800) 511-93-90</p>
+                  </div>
+                  <div>
+                    <h6>Email</h6>
+                    <p>info@zaryad-hockey.ru</p>
+                  </div>
+                  <div>
+                    <h6>ИНН</h6>
+                    <p>1646040440</p>
+                  </div>
+                  <div>
+                    <h6>ОГРН</h6>
+                    <p>1151674001632</p>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <span class="footer-end">© 2017-2022 Заряд</span>
+                <div class="footer-end pp">
+                  <a href="">Политика конфиденциальности</a>
+                </div>
+              </div>
+            </div>
+            <div class="footer-menu-container">
+              <div class="footer-menu-group1">
+                <div>
+                  <h4>О бренде</h4>
+
+                  <p><a href="">История бренда</a></p>
+                  <p><a href="">Технологии производства</a></p>
+                  <p><a href="">Производство</a></p>
+                  <p><a href="">Контакты магазинов</a></p>
+                </div>
+
+                <div>
+                  <h4>Партнерам</h4>
+
+                  <p><a href="">Как стать партнером</a></p>
+                  <p><a href="">Как мы работаем</a></p>
+                  <p><a href="">Информация о выборе контрагентов</a></p>
+                </div>
+              </div>
+
+              <div class="footer-menu-group2">
+                <h4>Покупателям</h4>
+
+                <div class="menu-group2-links">
+                  <span>
+                    <p><a href="">Доставка и оплата</a></p>
+                    <p><a href="">Обмен и возврат</a></p>
+                    <p><a href="">Гарантия</a></p> </span
+                  ><span>
+                    <p><a href="">Бонусная программа</a></p>
+                    <p><a href="">Таблица размеров</a></p>
+                    <p><a href="">Подарочный сертификат</a></p>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="btn-connect">
+            Связаться <br />
+            с нами
+          </button>
+          <img class="trade-mark" src="./logos/logo4.svg" alt="logo4" />
+        </div>
       </footer>
     </div>
-    
   </body>
 </html>
